# routes64

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: scenario.json
src/: app.rs  app_impl.rs  audio.rs  lib.rs  main.rs  save.rs  scenario.rs  states.rs  ui.rs  ui_impl.rs
src/app/: boot.rs  constants.rs  mod.rs
src/ui/: components.rs  mod.rs
tests/: scenario_fallback_ut.rs
